# scone-hello

./: Dockerfile  Jenkinsfile  README.md  TODO.md
deployment/: deploy.py  requirements.txt
script/: library.py
src/: CMakeLists.txt  main.cpp  run.sh
